# polar-arctic

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  sesh.vim
.github/: pull_request_template.md
.github/workflows/: deployment.yml  format.yml  rust.yml
output/: .gitignore  acc.csv  ecg.csv  hr.csv  test.csv
src/: data.rs  lib.rs  main.rs  menu.rs
src/blue/: fs.rs  mod.rs  setting.rs
src/modal/: ble.rs  description.rs  device.rs  id.rs  mod.rs  session.rs  trial.rs
