[package]
name = "polar-arctic"
version = "0.1.0"
edition = "2021"
authors = ["BeaconBrigade <beaconbrigade@gmail.com>"]
description = "An app for displaying and storing data from the Polar H10"
keywords = ["ble", "heartrate", "ecg", "electrocardiagram", "acceleration", "rr", "H10", "Polar"]
license = "MIT"
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/BeaconBrigade/polar-arctic"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
plotters-iced = "0.3"
iced = { version = "0.4", features = ["tokio", "canvas", "pure" ] }
iced_aw = { version = "0.2", features = ["card", "pure", "modal" ] }
plotters = "0.3"
csv = "1.1"
chrono = "0.4.19"
tokio = { version = "1.19.2", features = ["full"] }
arctic = "1.0.0"
futures = "0.3.21"
