[package]
name = "polar-arctic"
version = "0.1.1"
edition = "2021"
authors = ["BeaconBrigade <beaconbrigade@gmail.com>"]
description = "An app for displaying and storing data from the Polar H10"
keywords = ["ble", "heartrate", "H10", "Polar"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/BeaconBrigade/polar-arctic.git"
homepage = "https://github.com/BeaconBrigade/polar-arctic"
documentation = "https://docs.rs/polar-arctic/latest/polar-arctic"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rev_lines = "0.2.1"
plotters-iced = { version = "0.3", features = ["pure"] }
iced = { version = "0.4", features = ["tokio", "canvas", "pure"] }
iced_aw = { version = "0.2", features = ["card", "pure", "modal"] }
plotters = "0.3"
chrono = "0.4.24"
tokio = { version = "1.28.2", features = ["full"] }
arctic = "1.0.0"
futures = "0.3.28"
native-dialog = "0.6.3"
